# GoStatistics

./: .gitignore  Board.cpp  Board.hpp  CMakeLists.txt  Coordinate.cpp  Coordinate.hpp  Group.cpp  Group.hpp  README.md  Turn.cpp  Turn.hpp  main.cpp
nbproject/: Makefile-Debug.mk  Makefile-Linux_GCC.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Linux_GCC.bash  Package-Release.bash  configurations.xml  project.properties  project.xml
nbproject/private/: private.xml
src/: Board.cpp  Board.hpp  CMakeLists.txt  Coordinate.hpp  Group.cpp  Group.hpp  Turn.cpp  Turn.hpp  main.cpp
